--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           aws-access-key-id : ${{ secrets.MY_AWS_ACCESS_KEY }}
           aws-secret-access-key : ${{ secrets.MY_AWS_SECRET_KEY }}
-          awws-region : ${{ env.AWS_Region_name }}
+          aws-region : ${{ env.AWS_Region_name }}
       
       - name: copy deployment package to S3 bucket 
         run: aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME}}/
