--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,30 @@ jobs:
         run: aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME}}/
          
       - name: success Message 
-        run: echo "pipelines worked successfully "
+        run: echo "CI pipelines worked successfully "
+
+   my_cd_pipeline:
+    runs-on : ubuntu-latest
+    needs: [my_ci_pipeline]
+    
+    steps:
+      - name: configure AWS
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id : ${{ secrets.MY_AWS_ACCESS_KEY }}
+          aws-secret-access-key : ${{ secrets.MY_AWS_SECRET_KEY }}
+          aws-region : ${{ env.AWS_Region_name }}
+          
+      - name: create new elastic version
+        run: |
+          aws elasticbeanstalk create-application-version \
+          --application-name ${{ env.EB_application_name }} \
+          --source-bundle S3bucket="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}", S3key="${{ env.DEPLOY_PACKAGE_NAME }}" \
+          --version-label "Ver-${{ github.sha }}" \
+          --description "CommitSHA-${{ "github.sha }}"
+          
+      - name: create new elastic version
+        run: aws elasticbeanstalk update-environment --environment-name ${{ env.EB_environment_name  }} --version-label "Ver-${{ github.sha }}" 
+        
+      - name: success Message 
+        run: echo "CD pipelines worked successfully "
