--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,12 +53,8 @@ jobs:
           aws-secret-access-key : ${{ secrets.MY_AWS_SECRET_KEY }}
           aws-region : ${{ env.AWS_Region_name }}
           
-      - name: create new elastic version
-        run: aws elasticbeanstalk create-application-version \
-          --application-name ${{ env.EB_application_name }} \
-          --source-bundle S3bucket="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}", S3key="${{ env.DEPLOY_PACKAGE_NAME }}" \
-          --version-label "Ver-${{ github.sha }}" \
-          --description "CommitSHA-${{ "github.sha }}"
+      - name: create new elastic version      
+        run : aws elasticbeanstalk create-application-version --application-name ${{ env.EB_application_name }} --source-bundle S3bucket="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}", S3key="${{ env.DEPLOY_PACKAGE_NAME }}" --version-label "Ver-${{ github.sha }}" --description "CommitSHA-${{ "github.sha }}"
           
       - name: create new elastic version
         run: aws elasticbeanstalk update-environment --environment-name ${{ env.EB_environment_name  }} --version-label "Ver-${{ github.sha }}" 
