--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
 
    my_cd_pipeline:
     runs-on : ubuntu-latest
-    #needs: [my_ci_pipeline]
+    needs: [my_ci_pipeline]
     
     steps:
       - name: configure AWS
