--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v1
       
       - name: create zip package
-        run: zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x ".git"
+        run: zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
         
       - name: configure AWS
         uses: aws-actions/configure-aws-credentials@v1
